[package]
name = "vim-esc"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/luftaquila/vim-esc"
authors = ["luftaquila <mail@luftaquila.io>"]
description = "Set language to English on ESC press for Korean Vim users"
license = "Beerware"

[dependencies]
device_query = { git = "https://github.com/luftaquila/device_query", branch = "fix/ime" }
enigo = "0.3.0"
open = "5.3.2"
tray-item = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
  "Win32_UI_Input_Ime",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "2.3"

[package.metadata.bundle]
identifier = "io.luftaquila.vimesc"
# icon = "./8bit-heart.ico"
short_version = "1.0"
version = "1.0.0"
